v0.7.2.3 BETA
  * Added registerCustomEvent, so you can create custom events from your APIs.
  * Added event onCameraUpdate and Camera.x, Camera.y is now writeable.
  * Added a lot of new world map classes.
  * Added Misc.doPSwitchRaw - You can now trigger the raw P-Switch effect.
  * Added Misc.doPSwitch - You can now trigger the full P-Switch effect.
  * Added Misc.doBombExplosion - You can now spawn bomb explosions.
  * Bugfix [LunaLua]: Misc.resolveFile and Misc.resolveDirectory don't crash anymore and works faster now.
  * Bugfix [LunaLua]: Some unreliability of Animation.spawn has been fixed.
  * Bugfix [LunaLua]: Level sounds.ini now works correctly when using from the main game
  * Bugfix [LunaLua]: Hitboxes and offsets are now reset before loading a new level or world
  * Bugfix [LunaLua]: Misc.loadEpisode now works also without Autostart ini file.
  * Added onStart - This event is the better "onLoad". This event will be executed, when SMBX is running the first frame.
  * Fixed music.ini bug which wasn't supported track number suffix for NSF/HES/etc. multi-track musics
  * NPCs can now be killed, even if they are hidden.
  * Add width/height properties to LuaImageResource.
  * Allow onNPCKill to be cancelled.
  
v0.7.2.2 BETA:
  * Extended NPC class
  * Bugfix [LunaLua]: Fixed Camera.width and Camera.height
  * Bugfix [LunaLua]: Fixed the bug, where the functions Blocks.get and Blocks.getInterseting don't includes the last block.
  * Added onNPCKill event
  * Block can now be spawned with Block.spawn(...)

v0.7.2.1 BETA:
  * Extended NPC class
  * Added cheat values. Some cheat can now be toggled by value. (Defines.* namespace)
  * Added Audio.MusicArtistTag(), Audio.MusicAlbumTag() and Audio.MusicCopyrightTag() functions
  * Added console class. You can now use the windows console for debugging. (See LunaLua command arguments at the wiki)
  * Hotfix Bugfix [LunaLua]: Fixed ROP exploit at the Autocode module.

v0.7.2 BETA: