@@ -1,3 +1,7 @@
+-- To generate the wiki stuff just uncomment this line: 
+-- __wikiGEN = true
+
+
 --These are redefines for the wiki
 if __wikiGEN then
     FIELD_BYTE = 0
@@ -101,51 +105,51 @@ local defines = {
     
     
     --[[ Cheat Defines ]]--
-    cheat_shadowmario               = {defValue = false, minVal = nil, maxVal = nil, address = 0x00B2C8AA, size = FIELD_BOOLEAN,
+    cheat_shadowmario               = {--[[defValue = false,]] minVal = nil, maxVal = nil, address = 0x00B2C8AA, size = FIELD_BOOLEAN,
                                         n = 1, group = "Cheats", desc = "If the cheat shadowmario/ghostytime is active. If this cheat is active, then the player can go through blocks.", 
                                         customFuncGet = getBoolean, customFuncSet = setBoolean},
     
-    cheat_ahippinandahoppin         = {defValue = false, minVal = nil, maxVal = nil, address = 0x00B2C8AC, size = FIELD_BOOLEAN,
+    cheat_ahippinandahoppin         = {--[[defValue = false,]] minVal = nil, maxVal = nil, address = 0x00B2C8AC, size = FIELD_BOOLEAN,
                                         n = 2, group = "Cheats", desc = "If the cheat ahippinandahoppin/jumplikesomething is active. This cheat grants infinite double jumps.", 
                                         customFuncGet = getBoolean, customFuncSet = setBoolean},
     
-    cheat_sonictooslow              = {defValue = false, minVal = nil, maxVal = nil, address = 0x00B2C8AE, size = FIELD_BOOLEAN,
+    cheat_sonictooslow              = {--[[defValue = false,]] minVal = nil, maxVal = nil, address = 0x00B2C8AE, size = FIELD_BOOLEAN,
                                         n = 3, group = "Cheats", desc = "If the cheat sonictooslow/chipmunktimes is active. This cheat makes the player run very fast.", 
                                         customFuncGet = getBoolean, customFuncSet = setBoolean},
     
-    cheat_illparkwhereiwant         = {defValue = false, minVal = nil, maxVal = nil, address = 0x00B2C8B0, size = FIELD_BOOLEAN,
+    cheat_illparkwhereiwant         = {--[[defValue = false,]] minVal = nil, maxVal = nil, address = 0x00B2C8B0, size = FIELD_BOOLEAN,
                                         n = 4, group = "Cheats", desc = "If the cheat illparkwhereiwant is active. If this cheat is active, then you can move freely on the world map.", 
                                         customFuncGet = getBoolean, customFuncSet = setBoolean},
     
-    cheat_wingman                   = {defValue = false, minVal = nil, maxVal = nil, address = 0x00B2C8B2, size = FIELD_BOOLEAN,
+    cheat_wingman                   = {--[[defValue = false,]] minVal = nil, maxVal = nil, address = 0x00B2C8B2, size = FIELD_BOOLEAN,
                                         n = 5, group = "Cheats", desc = "If the cheat wingman/peawing is active. This cheat makes the player/yoshi fly infinitly.", 
                                         customFuncGet = getBoolean, customFuncSet = setBoolean},
     
-    cheat_captainn                  = {defValue = false, minVal = nil, maxVal = nil, address = 0x00B2C8B6, size = FIELD_BOOLEAN,
+    cheat_captainn                  = {--[[defValue = false,]] minVal = nil, maxVal = nil, address = 0x00B2C8B6, size = FIELD_BOOLEAN,
                                         n = 6, group = "Cheats", desc = "If the cheat captainn/juststop is active. If this cheat is active, then you can freeze time with the PAUSE-Button.", 
                                         customFuncGet = getBoolean, customFuncSet = setBoolean},
     
-    cheat_flamerthrower             = {defValue = false, minVal = nil, maxVal = nil, address = 0x00B2C8B8, size = FIELD_BOOLEAN,
+    cheat_flamerthrower             = {--[[defValue = false,]] minVal = nil, maxVal = nil, address = 0x00B2C8B8, size = FIELD_BOOLEAN,
                                         n = 7, group = "Cheats", desc = "If the cheat flamerthrower/mchammerdude is active. If this cheat is active, then you can spam projectiles very fast (i.e Fireball, Iceball, Hammer).", 
                                         customFuncGet = getBoolean, customFuncSet = setBoolean},
     
-    cheat_moneytree                 = {defValue = false, minVal = nil, maxVal = nil, address = 0x00B2C8BA, size = FIELD_BOOLEAN,
+    cheat_moneytree                 = {--[[defValue = false,]] minVal = nil, maxVal = nil, address = 0x00B2C8BA, size = FIELD_BOOLEAN,
                                         n = 8, group = "Cheats", desc = "If the cheat moneytree/havemoney is active. If this cheat is active, then you can spam projectiles very fast (i.e Fireball, Iceball, Hammer).", 
                                         customFuncGet = getBoolean, customFuncSet = setBoolean},
     
-    cheat_speeddemon                = {defValue = false, minVal = nil, maxVal = nil, address = 0x00B2C8BE, size = FIELD_BOOLEAN,
+    cheat_speeddemon                = {--[[defValue = false,]] minVal = nil, maxVal = nil, address = 0x00B2C8BE, size = FIELD_BOOLEAN,
                                         n = 9, group = "Cheats", desc = "If the cheat speeddemon/maytoofast is active. This values is the same as the \"Max FPS\" setting. If this is active, then there is no frame limit.", 
                                         customFuncGet = getBoolean, customFuncSet = setBoolean},
     
-    cheat_donthurtme                = {defValue = false, minVal = nil, maxVal = nil, address = 0x00B2C8C0, size = FIELD_BOOLEAN,
+    cheat_donthurtme                = {--[[defValue = false,]] minVal = nil, maxVal = nil, address = 0x00B2C8C0, size = FIELD_BOOLEAN,
                                         n = 10, group = "Cheats", desc = "If the cheat donthurtme/strategyyo is active. This values is the same as the \"God Mode\" setting. If this is active, then the player has god mode active and cannot be killed.", 
                                         customFuncGet = getBoolean, customFuncSet = setBoolean},
     
-    cheat_stickyfingers             = {defValue = false, minVal = nil, maxVal = nil, address = 0x00B2C8C2, size = FIELD_BOOLEAN,
+    cheat_stickyfingers             = {--[[defValue = false,]] minVal = nil, maxVal = nil, address = 0x00B2C8C2, size = FIELD_BOOLEAN,
                                         n = 11, group = "Cheats", desc = "If the cheat stickyfingers/tenacioustoes is active. This values is the same as the \"Grab All\" setting. If this is active, then player can grab every npc.", 
                                         customFuncGet = getBoolean, customFuncSet = setBoolean},
     
-    player_hasCheated               = {defValue = false, minVal = nil, maxVal = nil, address = 0x00B2C8C4, size = FIELD_BOOLEAN,
+    player_hasCheated               = {--[[{defValue = false,]] minVal = nil, maxVal = nil, address = 0x00B2C8C4, size = FIELD_BOOLEAN,
                                         n = 12, group = "Cheats", desc = "This is the indicator if the player has cheated (used on of the cheat codes). If this is the case then saving is deactivated. However with the cheat redigitiscool/raocowisswell you can activate cheating again. How lucky that you can deactivate it again :)", 
                                         customFuncGet = getBoolean, customFuncSet = setBoolean},
     
@@ -212,6 +216,9 @@ local function setDefine(defTable, value)
         theValue = value
     else
         theValue = defTable.defValue
+        if(theValue == nil)then
+            return
+        end
     end
     if(defTable.customFuncSet)then
         defTable:customFuncSet(theValue)
@@ -368,7 +375,11 @@ local function generateWiki()
                 elseif defineTable.size == FIELD_BOOLEAN then
                     wfile:write("BOOLEAN|")
                 end
-                wfile:write(tostring(defineTable.defValue).."|")
+                if(defineTable.defValue == nil)then
+                    wfile:write("None|")
+                else
+                    wfile:write(tostring(defineTable.defValue).."|")
+                end
                 if defineTable.minVal and defineTable.maxVal then
                     wfile:write("Min. Value: "..defineTable.minVal.."<br>")
                     wfile:write("Max. Value: "..defineTable.maxVal.."|")
