@@ -1,4 +1,5 @@
 v0.7.2.3 BETA
+  * Bugfix [LunaLua]: Cheat defines now don't reset.
   * Added registerCustomEvent, so you can create custom events from your APIs.
   * Added event onCameraUpdate and Camera.x, Camera.y is now writeable.
   * Added a lot of new world map classes.
